# cerberus

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .landmark.yml  .releaserc.json  .spellbook.yaml  .yamllint.yml  AGENTS.md  CI-FAILURE-SUMMARY.md  CI-RESOLUTION-PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OPERATOR-CHARTER-2026-07-17.md  QA.md  README.md  VISION.md  action.yml  coverage-policy.yml  dispatch.sh  mix.exs  package.json  project.md  ruff.toml  spec.md  thoughts.md  vision.md
.factory/: init.sh  services.yaml
.githooks/: pre-commit  pre-push
.groom/: BACKLOG.md  plan-2026-02-28.md  plan-2026-03-14.md  plan-2026-03-22.md  project.md  retro.md  triage-log.md
.pi/: bootstrap-report.md  persona.md
agents/: architecture-prompt.md  architecture.yaml  correctness-prompt.md  maintainability-prompt.md  maintainability.yaml  performance-prompt.md  performance.yaml  security-prompt.md
api/: action.yml  dispatch.sh
artifacts/: codex-simplify-github-review-helpers-walkthrough.md  issue-416-archive-cleanup-walkthrough.md  issue-448-elixir-cleanup-walkthrough.md  pr-282-body.md  pr-282-walkthrough.md  pr-298-walkthrough.md  pr-317-body.md  pr-317-walkthrough.md  pr-331-walkthrough.md  pr-333-walkthrough.md  pr-334-body.md  pr-365-walkthrough.md  pr-383-reviewer-delta-triage.md  pr-416-body.md  pr-448-body.md  pr-57-walkthrough.md
backlog.d/: 001-execution-evidence-hardening.md  001-rust-review-engine-contract.md  002-closed-loop-review-delivery.md  002-independent-caller-adapters.md  003-base-and-runtime-context.md  003-thinktank-decommission-migration.md  004-daedalus-reviewer-config-promotion.md  004-review-kernel-boundary.md  005-legacy-surface-retirement.md  005-upstream-evaluation-receipts.md  006-harness-model-evaluation.md  006-prove-the-reviewing-brain.md  007-citation-anchor-resolution.md  007-enforce-groundedness-and-context-truth.md  007-rust-harness-runtime-boundary.md  008-current-model-catalog-ingestion.md  008-pin-untested-safety-guards.md  009-operator-visibility-and-errors.md  009-rust-command-harness-adapter.md  (+48 more)
crates/cerberus-adapter/: Cargo.toml
crates/cerberus-adapter/src/: artifact_store.rs  command_harness.rs  git_diff.rs  github_action.rs  hosted_api.rs  lib.rs  thinktank_migration.rs
crates/cerberus-cli/: Cargo.toml
crates/cerberus-cli/src/: eval_harness.rs  hosted_api_fixture_server.rs  init_workflow.rs  local_review.rs  main.rs  model_catalog.rs  peer_harness.rs  provider_budget.rs
crates/cerberus-cli/tests/: github_action_dispatch.rs  github_action_entrypoint.rs  hosted_api_ingress.rs  hosted_api_request.rs  hosted_api_server.rs  hosted_api_service.rs  peer_harness_command.rs
src/: lib.rs  (+24 more)
(+687 files in other folders)
