[workspace]
resolver = "2"
members = [
  "crates/cerberus-adapter",
  "crates/cerberus-cli",
  "crates/cerberus-core",
  "crates/cerberus-schema",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/misty-step/cerberus"

[workspace.dependencies]
anyhow = "1"
cerberus-adapter = { path = "crates/cerberus-adapter" }
cerberus-core = { path = "crates/cerberus-core" }
cerberus-schema = { path = "crates/cerberus-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
libc = "0.2"
