[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.12"
thiserror = "2.0"
ureq = { version = "3.2.1", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
